# micromachine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  bitbucket-pipelines.yml  crt.S  env.cmake  gen.sh  gen2.sh  main.cpp  notes.txt  runtests.sh  test.s
debugger/: .gitignore  AddressTracker.cpp  AddressTracker.hpp  AddressTrackerList.cpp  AddressTrackerList.hpp  BreakpointRegistry.cpp  BreakpointRegistry.hpp  BreakpointsWindow.qml  BreakpointsWindowCreator.qml  CMakeLists.txt  Cpu.cpp  Cpu.hpp  CustomToolTip.qml  DisasmWindowCreator.qml  Disassembler.cpp  Disassembler.hpp  DisassemblyView.cpp  DisassemblyView.hpp  DisassemblyView.qml  DisassemblyWidget.qml  DisassemblyWindow.qml  Helper.js  Icon.qml  IconButton.qml  InstructionDetails.hpp  IntegerText.cpp  IntegerText.hpp  MemView.cpp  MemView.hpp  MemoryWindow.qml  MemoryWindowCreator.qml  Memoryview.qml  QCpu.cpp  QCpu.hpp  QInstruction.hpp  QMemRegion.hpp  RegularText.qml  ToolWindow.qml  UintDisplay.qml  WordDisplay.qml  (+4 more)
lib/: CMakeLists.txt  alu.hpp  apsr_reg.hpp  apsr_register.hpp  binops.hpp  bits.hpp  bitslice.hpp  context_switcher.hpp  cpu.cpp  cpu.hpp  disasm.hpp  dispatcher.hpp  exception.hpp  exception_defs.cpp  exception_defs.hpp  exception_manager.cpp  exception_manager.hpp  exception_state.hpp  exception_type.hpp  exception_vector.hpp  exec.hpp  exec_dispatcher.hpp  exec_mode.hpp  exec_mode_reg.cpp  exec_mode_reg.hpp  exec_mode_register.cpp  exec_mode_register.hpp  instruction_pair.hpp  instructions.hpp  integer_type.hpp  interrupt_manager.hpp  interrupter.cpp  interrupter.hpp  ipsr_reg.hpp  ipsr_register.hpp  memory.hpp  nvic.hpp  precond.hpp  programmer.hpp  register.hpp  (+6 more)
lib/memory/: mapping.hpp  memory.hpp
lib/registers/: apsr_reg.hpp  control_reg.hpp  epsr_reg.hpp  exec_mode_reg.hpp  ipsr_reg.hpp  ireg.hpp  pc_reg.hpp  primask_reg.hpp  registers.hpp  sp_reg.hpp  standard_reg.hpp  word_reg.hpp  xpsr_reg.hpp
micromachine/: .gitignore  CMakeLists.txt  alu.hpp  binops.hpp  bits.hpp  context_switcher.hpp  control_signals.hpp  cpu.cpp  cpu.hpp  disasm.hpp  dispatcher.hpp  exception_controller.hpp  exception_defs.hpp  exception_return_handler.hpp  exception_state.hpp  exception_vector.hpp  exec.hpp  exec_dispatcher.hpp  execution_mode.hpp  instruction_pair.hpp  instructions.hpp  interrupter.cpp  interrupter.hpp  interworking_brancher.hpp  loader.hpp  mcu.cpp  mcu.hpp  nvic.hpp  precond.hpp  programmer.hpp  stream_server.hpp  string_format.hpp  system.cpp  system.hpp  systick.hpp  timer.hpp  types.hpp
micromachine-test/: CMakeLists.txt  binary_helpers_tests.cpp  config_and_control_reg.cpp  icsr_reg.cpp  interrupt_and_reset_control_reg.cpp  interrupt_control_state_reg.cpp  nvic.cpp  stream_server_test.cpp  systick_control_reg.cpp  vtable_offset_reg.cpp  watchpointTest.cpp
micromachine-test/disasm/: disasm-16.txt  disasm.cpp
micromachine-test/exceptions/: exception_prioritisation.cpp  exception_vector.cpp  exception_vector_reset.cpp
micromachine-test/framework/: AssertHelpers.hpp  CodeGenerator.cpp  CodeGenerator.hpp  CpuTestFixture.hpp  CpuTestHarness.cpp  CpuTestHarness.hpp  IodeviceHelpers.hpp  MachineTestHarness.cpp  MachineTestHarness.hpp  MiniAssembler.hpp  PredicateHelpers.cpp  PredicateHelpers.hpp  Predicates.cpp  Predicates.hpp  TestHelpers.hpp  TestMachine.cpp  TestMachine.hpp  mcu_foward_decl.hpp
micromachine-test/instruction-tests/: adcRegisterInstrTest.cpp  addImmediateInstrTest.cpp  addRegisterInstrTest.cpp  addSPInstrTest.cpp  adrInstrTest.cpp  andRegisterInstrTest.cpp  asrImmediateInstrTest.cpp  asrRegisterInstrTest.cpp  bicRegisterInstrTest.cpp  bkptInstrTest.cpp  blInstrTest.cpp  blxInstrTest.cpp  branchInstrTest.cpp  bxInstrTest.cpp  cmnRegisterInstrTest.cpp  cmpImmediateInstrTest.cpp  cmpRegisterInstrTest.cpp  cpsInstrTest.cpp  dmbInstrTest.cpp  dsbInstrTest.cpp  eorRegisterInstrTest.cpp  isbInstrTest.cpp  ldmInstrTest.cpp  ldrImmediateInstrTest.cpp  ldrLiteralInstrTest.cpp  ldrRegisterInstrTest.cpp  ldrbImmediateInstrTest.cpp  ldrbRegisterInstrTest.cpp  ldrhImmediateInstrTest.cpp  ldrhRegisterInstrTest.cpp  ldrsbRegisterInstrTest.cpp  ldrshRegisterInstrTest.cpp  lslImmediateInstrTest.cpp  lslRegisterInstrTest.cpp  lsrImmediateInstrTest.cpp  lsrRegisterInstrTest.cpp  movImmediateInstrTest.cpp  movRegisterInstrTest.cpp  mrsInstrTest.cpp  msrInstrTest.cpp  (+33 more)
micromachine-test/legacy-instruction-tests/: adcRegisterInstrTest.cpp  addImmediateInstrTest.cpp  addRegisterInstrTest.cpp  addSPInstrTest.cpp  adrInstrTest.cpp  andRegisterInstrTest.cpp  asrImmediateInstrTest.cpp  asrRegisterInstrTest.cpp  bicRegisterInstrTest.cpp  bkptInstrTest.cpp  blInstrTest.cpp  blxInstrTest.cpp  branchInstrTest.cpp  bxInstrTest.cpp  cmnRegisterInstrTest.cpp  cmpImmediateInstrTest.cpp  cmpRegisterInstrTest.cpp  cpsInstrTest.cpp  dmbInstrTest.cpp  dsbInstrTest.cpp  (+53 more)
sdk/: CMakeLists.txt  boot.s  build.sh  cpptest.cpp  div.S  link.ld  lmul.S  micromachine.toolchain  performance.c  simple.c  test.c  uldivmod.S
termdbg/: BreakpointManager.hpp  CMakeLists.txt  ExecutionController.hpp  FormatedText.hpp  main.cpp
test/: CMakeLists.txt  adcRegisterInstrTest.cpp  addImmediateInstrTest.cpp  addRegisterInstrTest.cpp  addSPInstrTest.cpp  adrInstrTest.cpp  alu_tests.cpp  andRegisterInstrTest.cpp  asrImmediateInstrTest.cpp  asrRegisterInstrTest.cpp  bicRegisterInstrTest.cpp  binary_helpers_tests.cpp  bits_tests.cpp  bitslice_tests.cpp  bkptInstrTest.cpp  blInstrTest.cpp  blxInstrTest.cpp  branchInstrTest.cpp  bxInstrTest.cpp  cmnRegisterInstrTest.cpp  cmpImmediateInstrTest.cpp  cmpRegisterInstrTest.cpp  cpsInstrTest.cpp  cpu_tests.cpp  disasm.cpp  dmbInstrTest.cpp  dsbInstrTest.cpp  eorRegisterInstrTest.cpp  exception_prioritization.cpp  integer_tests.cpp  isbInstrTest.cpp  ldmInstrTest.cpp  ldrImmediateInstrTest.cpp  ldrLiteralInstrTest.cpp  ldrRegisterInstrTest.cpp  ldrbImmediateInstrTest.cpp  ldrbRegisterInstrTest.cpp  ldrhImmediateInstrTest.cpp  ldrhRegisterInstrTest.cpp  ldrsbRegisterInstrTest.cpp  (+46 more)
vm/: CMakeLists.txt  gdb-server.hpp  main.cpp
(+697 files in other folders)
